[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_hover.png" type="Texture" id=2]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_pressed.png" type="Texture" id=3]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_disabled.png" type="Texture" id=4]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_normal.png" type="Texture" id=5]
[ext_resource path="res://Images/Backgrounds/MainMenuBG.png" type="Texture" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Continue" type="TextureButton" parent="."]
visible = false
margin_left = 80.0
margin_top = 264.0
margin_right = 260.0
margin_bottom = 324.0
rect_min_size = Vector2( 180, 60 )
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Continue"]
margin_right = 121.0
margin_bottom = 39.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Continue"
align = 1
valign = 1

[node name="Start" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 368.0
margin_right = 283.0
margin_bottom = 428.0
rect_min_size = Vector2( 180, 60 )
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Start"]
margin_right = 135.0
margin_bottom = 39.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Jogar"
align = 1
valign = 1

[node name="Configurations" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 472.0
margin_right = 283.0
margin_bottom = 532.0
rect_min_size = Vector2( 180, 60 )
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Configurations"]
margin_right = 135.0
margin_bottom = 39.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Configurações"
align = 1
valign = 1

[node name="Quit" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 576.0
margin_right = 283.0
margin_bottom = 636.0
rect_min_size = Vector2( 180, 60 )
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Quit"]
margin_right = 135.0
margin_bottom = 39.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Sair"
align = 1
valign = 1

[node name="AboutTheDevs" type="TextureButton" parent="."]
margin_left = 952.0
margin_top = 608.0
margin_right = 1155.0
margin_bottom = 668.0
rect_min_size = Vector2( 180, 60 )
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="AboutTheDevs"]
margin_right = 135.0
margin_bottom = 39.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Sobre os devs"
align = 1
valign = 1

[node name="BG" type="Sprite" parent="."]
position = Vector2( 640, 400 )
scale = Vector2( 5, 5 )
z_index = -1
texture = ExtResource( 6 )

[node name="LOGO" type="Sprite" parent="."]
position = Vector2( 208, 176 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )

[connection signal="button_up" from="Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="Configurations" to="." method="_on_Configurations_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="AboutTheDevs" to="." method="_on_AboutTheDevs_button_up"]
